# monitoring_interface

./: .gitignore  Dockerfile  Dockerfile.230124.grund  Dockerfile.230125.grund  Dockerfile.230125.pinia  Dockerfile.230130.grund  Dockerfile.230130.run  Dockerfile.noNest  README.md  eslint.js  eslint.ts  insite-1.1.0_230227.patch  package.json  tsconfig.json  vue.config.js
docker/: Dockerfile  Dockerfile.1_ubuntu  Dockerfile.220912  Dockerfile.230123  Dockerfile.UR  Dockerfile.nest3.3  kitware.list
public/: favicon.xcf  nest_logo.xcf  nest_logo32x32.xcf  nest_logo65x64.xcf
src/: App.vue  main.ts
src/assets/: HeaderBarKnowledge.json  SubMenuKnowledge.json  SubMenuKnowledge.json~  ViewGridKnowledge.json  ViewGridKnowledge221121.json  ViewGridKnowledge_UseXUse.json
src/components/: #NestAPI.vue#  .#NestAPI.vue  BackendCockpit.vue  BackendWorks.vue  GrafanaWorks.vue  HelloWorld.vue  HelpWorks.vue  LeftSideBar.vue  NestAPI.vue  NestAPIFunction.vue  NestAPIFunctionDoc.vue  NestAPILink.vue  NestAPILinkJsonRaw.vue  NestAPILinkText.vue  NestAPILink_1.vue  NestAPILink_2.vue  NestAPILink_JSON.vue  SelectionWorks.vue  ViewWorks.vue
src/load/: Cargo.toml
src/load/src/: main.rs  portnr_pid.rs  proc_stats.rs  types.rs
src/lore/: JSC.json
src/router/: index.ts
src/store/: clickGrid.ts  color.ts  feed.ts  index.ts  load.ts  nodeGrid.ts  nodeGridExample.ts
src/ts/: Palette.ts  TypesForViews.ts  Util.ts
src/views/: .#NestAPIView.vue  APIGetConnections.vue  APIGetKernelStatus.vue  APITicsPerMs.vue  APIView.vue  AllCPUView.vue  (+17 more)
typings-custom/: vue3-plotly.d.ts
(+27 files in other folders)
