[package]
name = "proc-lore"
version = "0.1.0"
authors = ["Nick Rudnick <rudnick@uni-trier.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22" }
page_size = { version = "0.4.2" }
#time = { version = "0.3.14" }
#time = { version = "1.3.0" }
